# devvy

./: .gitignore  README.md  pyproject.toml
src/devvy/: cli.py  environment_manager.py  project_detector.py
